discussion/kv_engine/163999/163999_rev28_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49071: Make engine-specific storage type-safe [1/2]

Using an interface type for the engine-specific storage allows us to
avoid reinterpret_casts from void* and to use smart pointers for
automatic memory management of objects with lifetime bound by the
command context.

This will be a two-part patch. This first part swaps out the underlying
void* storage with EngineStorageIface and ensures that memory
allocations are correctly accounted for, but it does not change the
interface of the (get|set)EngineStorage methods we use in
EventuallyPersistentEngine to acccess the stored data.

I will refactor those methods and their callers to EngineStorageIface
in a follow-up patch.

Change-Id: Idadd77ded7a7be14bf7ca290f7aa29861f294442

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-09-14 15:09:33.000000000
Message: 
Uploaded patch set 28.
----------------------------------------------------------------------------------------------------------------------
Author: Vesko Karaganev
Date: 2022-09-14 15:10:50.000000000
Message: 
Patch Set 28:

(2 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-14 15:30:56.000000000
Message: 
Patch Set 28: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20386/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine_storage.h:27:17: error: use of undeclared identifier "ObjectRegistry" [clang-diagnostic-error]
        : owner(ObjectRegistry::getCurrentEngine()), data(std::move(data)) {
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine_storage.h:50:9: error: unknown type name "BucketAllocationGuard" [clang-diagnostic-error]
        BucketAllocationGuard guard(owner);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine_storage.h:55:5: error: unknown type name "EventuallyPersistentEngine" [clang-diagnostic-error]
    EventuallyPersistentEngine* owner;
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20386/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine_storage.h:27:17:
error: use of undeclared identifier "ObjectRegistry" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20386/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49377/ : FAILURE

Link error: error LNK2019: unresolved external symbol "public: void __cdecl cb::tracing::Tracer::record(enum cb::tracing::Code,class std::chrono::time_point<struct std::chrono::steady_clock,class std::chrono::duration<__int64,struct std::ratio<1,1000000000> > >,class std::chrono::time_point<struct std::chrono::steady_clock,class std::chrono::duration<__int64,struct std::ratio<1,1000000000> > >)" (?record@Tracer@tracing@cb@@QEAAXW4Code@23@V?$time_point@Usteady_clock@chrono@std@@V?$duration@_JU?$ratio@$00$0DLJKMKAA@@std@@@23@@chrono@std@@1@Z) referenced in function "public: __cdecl cb::tracing::SpanStopwatch::~SpanStopwatch(void)" (??1SpanStopwatch@tracing@cb@@QEAA@XZ) ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49377/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41505/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine_storage.h:27:17:
error: use of undeclared identifier "ObjectRegistry"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41505/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22359/ : FAILURE

Compile error at [2022-09-14T15:24:35.607Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine_storage.h:27:17:
error: ?ObjectRegistry? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22359/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10191/ : FAILURE

Compile error at [2022-09-14T15:14:53.977Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/ep_engine_storage.h:27:17:
error: ?ObjectRegistry? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10191/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23491/ : FAILURE

Failure of GoogleTest "MeteringTest.TTL_Expiry_Get":

<pre>
[ RUN      ] MeteringTest.TTL_Expiry_Get
[2022-09-14T15:24:31.355Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_serverless/metering_test.cc:2541: Failure
[2022-09-14T15:24:31.355Z] Expected equality of these values:
[2022-09-14T15:24:31.355Z]   cb::mcbp::Status::KeyEnoent
[2022-09-14T15:24:31.355Z]     Which is: Not found
[2022-09-14T15:24:31.355Z]   rsp.getStatus()
[2022-09-14T15:24:31.355Z]     Which is: Success
[2022-09-14T15:24:31.355Z] should have been TTL expired
[2022-09-14T15:24:31.355Z] [  FAILED  ] MeteringTest.TTL_Expiry_Get (1018 ms)
MeteringTest.TTL_Expiry_Get
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23491/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22727/ : FAILURE

Compile error at [2022-09-14T15:12:25.418Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_engine_storage.h:27:17:
error: ?ObjectRegistry? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22727/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19608/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10093/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30760/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21730/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
